[NO-REF] Fix FilterRangeSlider overflow issue

--- a/src/components/Filters/FilterRangeSlider.css
+++ b/src/components/Filters/FilterRangeSlider.css
@@ -25,6 +25,7 @@
 }
 
 .cio-slider-input {
+  overflow: hidden;
   position: relative;
   display: flex;
   flex-direction: row;
